--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "oauth-1.0a": "^2.2.4"
   },
   "devDependencies": {
+    "@size-limit/file": "^8.1.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^14.17.9",
-    "bundlesize": "^0.18.0",
     "dotenv": "^10.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.8.2",
@@ -43,27 +43,36 @@
     "husky": "^7.0.1",
     "jest": "^25.5.0",
     "microbundle": "^0.13.3",
+    "size-limit": "^8.1.0",
     "typescript": "^4.3.5"
   },
   "scripts": {
     "lint": "eslint . && tsc index.d.ts",
     "fix": "eslint --fix .",
-    "build": "microbundle {stream,twitter}.js && bundlesize",
-    "test": "jest --detectOpenHandles",
+    "build": "microbundle {stream,twitter}.js",
+    "size": "size-limit",
+    "test": "jest --detectOpenHandles && yarn size",
     "release": "npm run -s build && npm run lint && npm test && git tag $npm_package_version && git push && git push --tags && npm publish",
     "prepare": "husky install"
   },
   "jest": {
     "testEnvironment": "node"
   },
-  "bundlesize": [
+  "size-limit": [
     {
-      "path": "dist/**.js",
-      "maxSize": "3 kB"
+      "path": "dist/twitter.umd.js",
+      "limit": "3 kB",
+      "brotli": true
+    },
+    {
+      "path": "dist/stream.umd.js",
+      "limit": "3 kB",
+      "brotli": true
     },
     {
       "path": "index.d.ts",
-      "maxSize": "3 kB"
+      "limit": "3 kB",
+      "brotli": true
     }
   ]
 }
