--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["local>kobakazu0429/renovate-config"]
+  "extends": ["local>kobakazu0429/renovate-config"],
+  "includeForks": true
 }
