--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "twitter stream"
   ],
   "dependencies": {
-    "cross-fetch": "^3.1.5",
+    "crypto-js": "^4.1.1",
     "oauth-1.0a": "^2.2.4"
   },
   "devDependencies": {
